--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,8 +22,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
-                android:padding="4sp"
                 android:contentDescription="5KM"
+                android:padding="4sp"
                 android:src="@drawable/walk" />
 
             <ImageButton
@@ -31,8 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="4sp"
                 android:contentDescription="25KM"
+                android:padding="4sp"
                 android:src="@drawable/cycle" />
 
             <ImageButton
@@ -40,15 +40,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
-                android:padding="4sp"
                 android:contentDescription="50KM"
+                android:padding="4sp"
                 android:src="@drawable/drive" />
         </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
+            android:layout_alignParentBottom="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -67,12 +67,28 @@
 
                 </EditText>
 
-                <Button
-                    android:id="@+id/search_btn"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="SEARCH" />
+                    android:orientation="horizontal"
+                    android:gravity="center">
 
+                    <Button
+                        android:id="@+id/search_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="25sp"
+                        android:textColor="#ffffff"
+                        android:background="#673AB7"
+                        android:text="SEARCH" />
+                    <Button
+                        android:id="@+id/nearby_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Near Me"
+                        android:background="#E91E63"
+                        android:textColor="#fff"/>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </RelativeLayout>
