Shubham with some more ui

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -180,8 +180,9 @@
                     android:layout_height="wrap_content"
                     android:text="Sign up"
                     android:background="#673AB7"
+                    android:textStyle="bold"
                     android:textColor="#ffffff"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
             </LinearLayout>
         </ScrollView>
