--- a/app/src/main/res/layout/fragment_my_products.xml
+++ b/app/src/main/res/layout/fragment_my_products.xml
@@ -2,13 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
+    android:orientation="vertical"
     tools:context="com.solipsism.seekpick.Dash.MyProductsFragment">
+
+    <EditText
+        android:id="@+id/search_product"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_search"
+        android:drawablePadding="4sp"
+        android:layout_marginBottom="9sp"
+        android:hint="Search"/>
 
     <ListView
         android:id="@+id/List_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="9sp"
-        />
+        android:padding="9sp" />
 </LinearLayout>
