--- a/app/src/main/res/layout/modal_my_products.xml
+++ b/app/src/main/res/layout/modal_my_products.xml
@@ -7,16 +7,16 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5sp"
         android:layout_marginBottom="4sp"
-        android:weightSum="10"
-        android:orientation="horizontal">
+        android:layout_marginTop="5sp"
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <LinearLayout
             android:layout_width="0sp"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
             android:layout_marginEnd="5sp"
+            android:layout_weight="9"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -46,6 +46,14 @@
                 android:layout_marginTop="5sp"
                 android:text="tags"
                 android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/status1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:text="status"
+                android:textSize="12sp" />
 
 
         </LinearLayout>
