--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,6 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/email"
                         android:drawablePadding="4sp"
                         android:inputType="textEmailAddress"
@@ -60,6 +61,7 @@
                         android:drawableStart="@drawable/store"
                         android:drawablePadding="4sp"
                         android:inputType="text"
+                        android:background="@drawable/border_blue"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -72,6 +74,7 @@
                         android:id="@+id/signup_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/border_blue"
                         android:hint="Address"
                         android:drawableStart="@drawable/directions"
                         android:drawablePadding="4sp"
@@ -94,6 +97,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="PIN CODE"
+                            android:background="@drawable/border_blue"
                             android:drawableStart="@drawable/placeholder"
                             android:drawablePadding="4sp"
                             android:inputType="number"
@@ -120,6 +124,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/phone"
                         android:drawablePadding="4sp"
                         android:inputType="number"
@@ -133,6 +138,7 @@
 
                     <AutoCompleteTextView
                         android:id="@+id/signup_username"
+                        android:background="@drawable/border_blue"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
@@ -150,6 +156,7 @@
                     <AutoCompleteTextView
                         android:id="@+id/signup_password"
                         android:layout_width="match_parent"
+                        android:background="@drawable/border_blue"
                         android:layout_height="wrap_content"
                         android:hint="Password"
                         android:drawableStart="@drawable/password"
@@ -171,7 +178,9 @@
                         android:drawableStart="@drawable/password"
                         android:drawablePadding="4sp"
                         android:inputType="textPassword"
-                        android:maxLines="1" />
+                        android:background="@drawable/border_blue"
+                        android:maxLines="1"
+                        android:layout_marginBottom="10dp"/>
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
