--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,6 +71,7 @@
                                 android:layout_height="wrap_content"
                                 android:drawablePadding="4sp"
                                 android:drawableStart="@drawable/password"
+                                android:background="@drawable/border_blue"
                                 android:hint="Password"
                                 android:inputType="textPassword"
                                 android:maxLines="1" />
@@ -83,6 +84,7 @@
                             android:layout_height="wrap_content"
                             android:text="Sign in"
                             android:textStyle="bold"
+                            android:layout_marginTop="10dp"
                             android:background="#673AB7"
                             android:textColor="#ffffff"
                             android:textSize="16sp" />
