--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -38,6 +38,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/email"
                         android:drawablePadding="4sp"
                         android:inputType="textEmailAddress"
@@ -57,6 +58,7 @@
                         android:drawableStart="@drawable/store"
                         android:drawablePadding="4sp"
                         android:inputType="text"
+                        android:background="@drawable/border_blue"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -70,6 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Address"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/directions"
                         android:drawablePadding="4sp"
                         android:inputType="text" />
@@ -94,6 +97,7 @@
                             android:hint="PIN CODE"
                             android:drawableStart="@drawable/placeholder"
                             android:drawablePadding="4sp"
+                            android:background="@drawable/border_blue"
                             android:inputType="number"
                             android:maxLength="6" />
                     </android.support.design.widget.TextInputLayout>
@@ -117,6 +121,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/phone"
                         android:drawablePadding="4sp"
                         android:inputType="number"
@@ -133,6 +138,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/users"
                         android:drawablePadding="4sp"
                         android:inputType="text"
@@ -149,6 +155,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/password"
                         android:drawablePadding="4sp"
                         android:inputType="textPassword"
@@ -165,6 +172,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Confirm Password"
+                        android:background="@drawable/border_blue"
                         android:drawableStart="@drawable/password"
                         android:drawablePadding="4sp"
                         android:inputType="textPassword"
